# gameman

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: rust.yml
examples/: debugger.rs  json.rs  opcode_percentage.rs  screen.rs  terminal.rs
src/: bus.rs  common.rs  consts.rs  cpu.rs  errors.rs  flags.rs  gpu.rs  interrupts.rs  joypad.rs  lib.rs  macros.rs  registers.rs  screen.rs  tests.rs
src/bus/: mbc1.rs  mbc3.rs  mbc_no.rs  mod.rs
src/cpu/: cb_opcodes.rs  instructions.rs  interrupts.rs  mod.rs  opcodes.rs  opcodes_cb.rs
src/gpu/: blanks.rs  fifo.rs  mod.rs  oam_parser.rs  oam_search.rs  palette.rs  pixel_transfer.rs  sprite_parser.rs  states.rs  tile_parser.rs  window.rs
src/gpu/pixel_transfer/: background.rs  mod.rs  sprite.rs  window.rs
src/gpu/states/: blanks.rs  mod.rs  oam_search.rs  pixel_transfer.rs
