[package]
name = "gameman"
version = "0.1.0"
edition = "2021"

# Stuff used for the examples
[dev-dependencies]
colored = "2.0.4"
macroquad = "0.4.4"

# The emulator can be very slow without optimizations, use this to make it optimized
# along with the usual debug symbols and stuff
[profile.release-debug]
inherits = "dev"
opt-level = 3
